// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketStatus component closed ticket 1`] = `
<div
  className="d-inline-block mr-2"
>
  <ei
    className="d-inline-block"
    color="success"
    id="change-status-button"
    onClick={[Function]}
    tag="button"
    type="button"
  >
    <i
      className="fa fa-fw fa-check mr-1 undefined"
    />
  </ei>
  <UncontrolledTooltip
    delay={0}
    placement="bottom"
    target="change-status-button"
  >
    Reopen
  </UncontrolledTooltip>
</div>
`;

exports[`TicketStatus component new ticket 1`] = `
<div
  className="d-inline-block mr-2"
>
  <ei
    className="d-inline-block"
    color="secondary"
    id="change-status-button"
    onClick={[Function]}
    tag="button"
    type="button"
  >
    <i
      className="fa fa-fw fa-check mr-1"
    />
    Close
  </ei>
  <UncontrolledTooltip
    delay={0}
    placement="bottom"
    target="change-status-button"
  >
    Close (Alt + C)
  </UncontrolledTooltip>
</div>
`;

exports[`TicketStatus component open ticket 1`] = `
<div
  className="d-inline-block mr-2"
>
  <ei
    className="d-inline-block"
    color="secondary"
    id="change-status-button"
    onClick={[Function]}
    tag="button"
    type="button"
  >
    <i
      className="fa fa-fw fa-check mr-1"
    />
    Close
  </ei>
  <UncontrolledTooltip
    delay={0}
    placement="bottom"
    target="change-status-button"
  >
    Close (Alt + C)
  </UncontrolledTooltip>
</div>
`;
